--- a/app/views/pages/city.html.erb
+++ b/app/views/pages/city.html.erb
@@ -1,3 +1,22 @@
-<h1>Rio de Janeiro</h1>
-<h2>89 F</h2>
-<h4>Scattered Clouds</h4>
+
+<div class="container">
+	<h1 id="city_name"></h1>
+	<h2 id="temperature"></h2>
+	<p id="conditions"></p>
+</div>
+
+
+<%= javascript_tag do %>
+	var pathArray = window.location.pathname.split( '/' );
+	$.ajax("/api/cities/"+pathArray[2],{
+	success: function(data){
+	  $('#city_name').text(data['name']);
+	  K = data['temperature'];
+	  F = Math.round(K * 9/5 - 459.67)
+	  C = Math.round((F-32)*5/9)
+	  $('#temperature').text(F + ' F / ' + C + ' C');
+	  $('#conditions').text(data['conditions']);
+	}
+	});
+
+<% end %>
