fixing some edge cases, like wrong names or no names at all

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Weather</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application', controller_name %>
+  <%= javascript_include_tag 'application' %>
   <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900,300,600' %>
   <%= csrf_meta_tags %>
 </head>
