instructions in the page. and some polishes.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,4 +1,14 @@
-.container{margin: auto; width: 30%; font-family: 'Source Sans Pro', sans-serif;
-padding: 40px 60px 50px 60px; background-color: #e8e8e8;margin-top: 40px}
+.container{
+	margin: auto; width: 33%; font-family: 'Source Sans Pro', sans-serif;
+}
+.card{
+	padding: 40px 60px 50px 60px; background-color: #e8e8e8;margin-top: 40px
+}
+.info{
+padding: 20px; 
+} 
+.info p{
+	font-size: 12px;line-height: 24px;color:#888;
+}
 h1{font-size: 60px; color: #222;}
 h2{font-size: 28px; color: #444;}
