--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -8,7 +8,20 @@
 padding: 20px; 
 } 
 .info p{
-	font-size: 12px;line-height: 24px;color:#888;
+	font-size: 1em;line-height: 2em;color:#888;
 }
-h1{font-size: 60px; color: #222;}
-h2{font-size: 28px; color: #444;}
+h1{font-size: 5em; color: #222;}
+h2{font-size: 2.5em; color: #444;}
+
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .container {
+        width: 90%;
+    }
+    .card{ padding: 20px; }
+    h1{font-size: 4em;}
+    .info p{font-size: 0.9em;line-height: 1.8em;}
+}
+
+}
